polychem/src/polymers/snapshots/polychem__polymers__polymer_chemistry__tests__parse_bond_with_missing_to.snap
---
source: polychem/src/polymers/polymer_chemistry.rs
description: bonds
expression: out
---
  × error parsing KDL

Error:   × child node `to` is required
   ╭─[test:1:1]
 1 │ ╭─▶ Glycosidic {
 2 │ │       from "Hydroxyl" at="Reducing End"
 3 │ ├─▶ }
   · ╰──── node starts here
   ╰────

